# ztract

./: CONTRIBUTING.md  Makefile  NOTICE  README.md  llms.txt  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: cloud.md  codepages.md  commands.md  connectors.md  contributing.md  copybooks.md  index.html  index.md  installation.md  quickstart.md  yaml-pipelines.md
docs/superpowers/plans/: 2026-04-06-ztract-implementation.md
docs/superpowers/specs/: 2026-04-06-ztract-design.md
engine-java/: pom.xml
engine-java/src/main/java/com/ztract/engine/: CobrixHelper.java  Decoder.java  Encoder.java  SchemaExtractor.java  Validator.java  ZtractEngine.java
tests/: conftest.py  test_codepages.py  test_complex_copybooks.py  test_config.py  test_observability.py
tests/connectors/: test_dataset_format.py  test_ftp.py  test_local.py  test_sftp.py  test_zowe.py
tests/diff/: test_differ.py  test_redefines.py
tests/engine/: test_bridge.py  test_download_engine.py
tests/generate/: test_complex_copybooks.py  test_generator.py
tests/integration/: test_edge_cases.py
tests/pipeline/: test_fanout.py  test_orchestrator.py
tests/test_data/: COMPLEX_NESTED_OCCURS.cpy  COMPLEX_NUMERIC.cpy  COMPLEX_OCCURS.cpy  COMPLEX_REDEFINES.cpy  CUSTMAST.cpy  NESTED_OCCURS_SAMPLE.csv  NUMERIC_SAMPLE.csv  OCCURS_SAMPLE.csv  REDEFINES_SAMPLE.csv
tests/writers/: test_base.py  test_csv.py  test_database.py  test_jsonl.py  test_parquet.py
ztract/: __init__.py  __main__.py  codepages.py
ztract/cli/: convert.py  diff.py  generate.py  init.py  inspect.py  root.py  run.py  status.py  validate.py
ztract/config/: loader.py  schema.py
ztract/connectors/: base.py  dataset_format.py  ftp.py  local.py  sftp.py  zowe.py
ztract/diff/: differ.py  redefines.py
ztract/engine/: bridge.py  download_engine.py
ztract/generate/: field_patterns.py  generator.py
ztract/observability/: __init__.py  audit.py  logging.py  progress.py  rejects.py
ztract/pipeline/: fanout.py  orchestrator.py  step_context.py
ztract/writers/: base.py  csv.py  database.py  ebcdic.py  jsonl.py  parquet.py
