[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ztract"
version = "0.1.0"
description = "Extract mainframe EBCDIC binary files using COBOL copybooks"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "pyarrow>=14.0",
    "sqlalchemy>=2.0",
    "paramiko>=3.0",
    "faker>=20.0",
    "rich>=13.0",
    "daff>=1.3",
    "multidiff>=0.2",
]

[project.scripts]
ztract = "ztract.cli.root:cli"

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9"]
mysql-mit = ["pymysql>=1.1"]
mysql-gpl = ["mysql-connector-python>=8.0"]
mssql = ["pyodbc>=5.0"]
all-db = ["psycopg2-binary>=2.9", "pymysql>=1.1", "pyodbc>=5.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ztract*"]

[tool.setuptools.package-data]
"ztract.engine" = ["*.jar"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[mypy]
python_version = "3.10"
