[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ztract"
version = "0.1.0.dev1"
description = "Extract mainframe EBCDIC binary files using real COBOL copybooks. Zero MIPS."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "SRRC-1334", email = "srrc1334@users.noreply.github.com"},
]
keywords = [
    "mainframe", "cobol", "ebcdic", "zos", "ibm", "mips",
    "copybook", "parquet", "csv", "etl", "cobrix",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Systems Administration",
    "Topic :: Database",
]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "pyarrow>=14.0",
    "sqlalchemy>=2.0",
    "paramiko>=3.0",
    "faker>=20.0",
    "rich>=13.0",
    "daff>=1.3",
    "multidiff>=0.2",
]

[project.scripts]
ztract = "ztract.cli.root:cli"

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9"]
mysql-mit = ["pymysql>=1.1"]
mysql-gpl = ["mysql-connector-python>=8.0"]
mssql = ["pyodbc>=5.0"]
all-db = ["psycopg2-binary>=2.9", "pymysql>=1.1", "pyodbc>=5.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/SRRC-1334/ztract"
Repository = "https://github.com/SRRC-1334/ztract"
Issues = "https://github.com/SRRC-1334/ztract/issues"
Documentation = "https://srrc-1334.github.io/ztract"

[tool.setuptools.packages.find]
where = ["."]
include = ["ztract*"]

[tool.setuptools.package-data]
"ztract.engine" = ["*.jar"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[mypy]
python_version = "3.10"
